src/parser/parser.output
Nonterminals useless in grammar

    opamp
    switch
    diode
    mosfet


Terminals unused in grammar

    RK_ACI
    RK_AM
    RK_EXP
    RK_LIN
    RK_OCT
    RK_PAT
    RK_PE
    RK_PL
    RK_POI
    RK_PU
    RK_PWL
    RK_R
    RK_RD
    RK_SFFM
    RK_SIN
    VALUE


Grammar

    0 $accept: line $end

    1 line: component EOL
    2     | command EOL
    3     | COMMENTLINE
    4     | EOL
    5     | DOCEOF

    6 component: resistor
    7          | capacitor
    8          | inductor
    9          | vsource
   10          | isource
   11          | vcvs
   12          | vccs
   13          | cccs
   14          | ccvs

   15 command: op
   16        | end
   17        | print
   18        | dc
   19        | ac
   20        | options
   21        | plot
   22        | tran

   23 resistor: P_RESISTOR node node value

   24 capacitor: P_CAPACITOR node node value

   25 inductor: P_INDUCTOR node node value

   26 vsource: P_VSOURCE node node
   27        | P_VSOURCE node node value
   28        | vsource RK_DC value
   29        | vsource RK_AC value
   30        | vsource RK_PULSE LBRACKET value value value value value value value RBRACKET

   31 isource: P_ISOURCE node node
   32        | P_ISOURCE node node value
   33        | isource RK_DC value
   34        | isource RK_AC value

   35 vccs: P_VCCS node node node node value

   36 vcvs: P_VCVS node node node node value

   37 cccs: P_CCCS node node node node value

   38 ccvs: P_CCVS node node node node value

   39 op: CMD_OP

   40 end: CMD_END

   41 print: CMD_PRINT RK_DC
   42      | CMD_PRINT RK_AC
   43      | CMD_PRINT RK_TRAN
   44      | CMD_PRINT RK_OP
   45      | print VAR_I
   46      | print VAR_V

   47 dc: CMD_DC
   48   | dc P_ISOURCE value value value
   49   | dc P_VSOURCE value value value

   50 ac: CMD_AC RK_DEC value value value
   51   | ac P_ISOURCE value value value
   52   | ac P_VSOURCE value value value

   53 options: CMD_OPTIONS
   54        | options OPTIONS_ITEM

   55 plot: CMD_PLOT RK_DC
   56     | CMD_PLOT RK_AC
   57     | CMD_PLOT RK_TRAN
   58     | plot VAR_I
   59     | plot VAR_V

   60 tran: CMD_TRAN value value
   61     | CMD_TRAN value value value

   62 value: REAL
   63      | INTEGER

   64 node: STRING
   65     | P_RESISTOR
   66     | P_CAPACITOR
   67     | P_INDUCTOR
   68     | P_ISOURCE
   69     | P_VSOURCE
   70     | P_VCCS
   71     | P_CCCS
   72     | P_CCVS
   73     | P_VCVS
   74     | P_OPAMP
   75     | P_SWITCH
   76     | P_DIODE
   77     | P_MOSFET
   78     | INTEGER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DOCEOF (258) 5
    P_RESISTOR <str> (259) 23 65
    P_CAPACITOR <str> (260) 24 66
    P_INDUCTOR <str> (261) 25 67
    P_ISOURCE <str> (262) 31 32 48 51 68
    P_VSOURCE <str> (263) 26 27 49 52 69
    P_VCCS <str> (264) 35 70
    P_CCCS <str> (265) 37 71
    P_CCVS <str> (266) 38 72
    P_VCVS <str> (267) 36 73
    P_OPAMP <str> (268) 74
    P_SWITCH <str> (269) 75
    P_DIODE <str> (270) 76
    P_MOSFET <str> (271) 77
    RK_AC <str> (272) 29 34 42 56
    RK_ACI <str> (273)
    RK_AM <str> (274)
    RK_DC <str> (275) 28 33 41 55
    RK_DEC <str> (276) 50
    RK_EXP <str> (277)
    RK_LIN <str> (278)
    RK_OCT <str> (279)
    RK_PAT <str> (280)
    RK_PE <str> (281)
    RK_PL <str> (282)
    RK_POI <str> (283)
    RK_PU <str> (284)
    RK_PULSE <str> (285) 30
    RK_PWL <str> (286)
    RK_R <str> (287)
    RK_RD <str> (288)
    RK_SFFM <str> (289)
    RK_SIN <str> (290)
    RK_OP <str> (291) 44
    RK_TRAN <str> (292) 43 57
    CMD_OP <str> (293) 39
    CMD_END <str> (294) 40
    CMD_PRINT <str> (295) 41 42 43 44
    CMD_DC <str> (296) 47
    CMD_AC <str> (297) 50
    CMD_OPTIONS <str> (298) 53
    CMD_PLOT <str> (299) 55 56 57
    CMD_TRAN <str> (300) 60 61
    OPTIONS_ITEM <str> (301) 54
    VAR_V <str> (302) 46 59
    VAR_I <str> (303) 45 58
    LBRACKET <str> (304) 30
    RBRACKET <str> (305) 30
    EOL <str> (306) 1 2 4
    STRING <str> (307) 64
    COMMENTLINE <str> (308) 3
    INTEGER <num> (309) 63 78
    REAL <value> (310) 62
    VALUE <value> (311)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    line (58)
        on left: 1 2 3 4 5
        on right: 0
    component (59)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 1
    command (60)
        on left: 15 16 17 18 19 20 21 22
        on right: 2
    resistor <str> (61)
        on left: 23
        on right: 6
    capacitor <str> (62)
        on left: 24
        on right: 7
    inductor <str> (63)
        on left: 25
        on right: 8
    vsource <str> (64)
        on left: 26 27 28 29 30
        on right: 9 28 29 30
    isource <str> (65)
        on left: 31 32 33 34
        on right: 10 33 34
    vccs <str> (66)
        on left: 35
        on right: 12
    vcvs <str> (67)
        on left: 36
        on right: 11
    cccs <str> (68)
        on left: 37
        on right: 13
    ccvs <str> (69)
        on left: 38
        on right: 14
    op (70)
        on left: 39
        on right: 15
    end (71)
        on left: 40
        on right: 16
    print (72)
        on left: 41 42 43 44 45 46
        on right: 17 45 46
    dc (73)
        on left: 47 48 49
        on right: 18 48 49
    ac (74)
        on left: 50 51 52
        on right: 19 51 52
    options (75)
        on left: 53 54
        on right: 20 54
    plot (76)
        on left: 55 56 57 58 59
        on right: 21 58 59
    tran (77)
        on left: 60 61
        on right: 22
    value <value> (78)
        on left: 62 63
        on right: 23 24 25 27 28 29 30 32 33 34 35 36 37 38 48 49 50 51 52 60 61
    node <str> (79)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 23 24 25 26 27 31 32 35 36 37 38


State 0

    0 $accept: • line $end

    DOCEOF       shift, and go to state 1
    P_RESISTOR   shift, and go to state 2
    P_CAPACITOR  shift, and go to state 3
    P_INDUCTOR   shift, and go to state 4
    P_ISOURCE    shift, and go to state 5
    P_VSOURCE    shift, and go to state 6
    P_VCCS       shift, and go to state 7
    P_CCCS       shift, and go to state 8
    P_CCVS       shift, and go to state 9
    P_VCVS       shift, and go to state 10
    CMD_OP       shift, and go to state 11
    CMD_END      shift, and go to state 12
    CMD_PRINT    shift, and go to state 13
    CMD_DC       shift, and go to state 14
    CMD_AC       shift, and go to state 15
    CMD_OPTIONS  shift, and go to state 16
    CMD_PLOT     shift, and go to state 17
    CMD_TRAN     shift, and go to state 18
    EOL          shift, and go to state 19
    COMMENTLINE  shift, and go to state 20

    line       go to state 21
    component  go to state 22
    command    go to state 23
    resistor   go to state 24
    capacitor  go to state 25
    inductor   go to state 26
    vsource    go to state 27
    isource    go to state 28
    vccs       go to state 29
    vcvs       go to state 30
    cccs       go to state 31
    ccvs       go to state 32
    op         go to state 33
    end        go to state 34
    print      go to state 35
    dc         go to state 36
    ac         go to state 37
    options    go to state 38
    plot       go to state 39
    tran       go to state 40


State 1

    5 line: DOCEOF •

    $default  reduce using rule 5 (line)


State 2

   23 resistor: P_RESISTOR • node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 56


State 3

   24 capacitor: P_CAPACITOR • node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 57


State 4

   25 inductor: P_INDUCTOR • node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 58


State 5

   31 isource: P_ISOURCE • node node
   32        | P_ISOURCE • node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 59


State 6

   26 vsource: P_VSOURCE • node node
   27        | P_VSOURCE • node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 60


State 7

   35 vccs: P_VCCS • node node node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 61


State 8

   37 cccs: P_CCCS • node node node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 62


State 9

   38 ccvs: P_CCVS • node node node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 63


State 10

   36 vcvs: P_VCVS • node node node node value

    P_RESISTOR   shift, and go to state 41
    P_CAPACITOR  shift, and go to state 42
    P_INDUCTOR   shift, and go to state 43
    P_ISOURCE    shift, and go to state 44
    P_VSOURCE    shift, and go to state 45
    P_VCCS       shift, and go to state 46
    P_CCCS       shift, and go to state 47
    P_CCVS       shift, and go to state 48
    P_VCVS       shift, and go to state 49
    P_OPAMP      shift, and go to state 50
    P_SWITCH     shift, and go to state 51
    P_DIODE      shift, and go to state 52
    P_MOSFET     shift, and go to state 53
    STRING       shift, and go to state 54
    INTEGER      shift, and go to state 55

    node  go to state 64


State 11

   39 op: CMD_OP •

    $default  reduce using rule 39 (op)


State 12

   40 end: CMD_END •

    $default  reduce using rule 40 (end)


State 13

   41 print: CMD_PRINT • RK_DC
   42      | CMD_PRINT • RK_AC
   43      | CMD_PRINT • RK_TRAN
   44      | CMD_PRINT • RK_OP

    RK_AC    shift, and go to state 65
    RK_DC    shift, and go to state 66
    RK_OP    shift, and go to state 67
    RK_TRAN  shift, and go to state 68


State 14

   47 dc: CMD_DC •

    $default  reduce using rule 47 (dc)


State 15

   50 ac: CMD_AC • RK_DEC value value value

    RK_DEC  shift, and go to state 69


State 16

   53 options: CMD_OPTIONS •

    $default  reduce using rule 53 (options)


State 17

   55 plot: CMD_PLOT • RK_DC
   56     | CMD_PLOT • RK_AC
   57     | CMD_PLOT • RK_TRAN

    RK_AC    shift, and go to state 70
    RK_DC    shift, and go to state 71
    RK_TRAN  shift, and go to state 72


State 18

   60 tran: CMD_TRAN • value value
   61     | CMD_TRAN • value value value

    INTEGER  shift, and go to state 73
    REAL     shift, and go to state 74

    value  go to state 75


State 19

    4 line: EOL •

    $default  reduce using rule 4 (line)


State 20

    3 line: COMMENTLINE •

    $default  reduce using rule 3 (line)


State 21

    0 $accept: line • $end

    $end  shift, and go to state 76


State 22

    1 line: component • EOL

    EOL  shift, and go to state 77


State 23

    2 line: command • EOL

    EOL  shift, and go to state 78


State 24

    6 component: resistor •

    $default  reduce using rule 6 (component)


State 25

    7 component: capacitor •

    $default  reduce using rule 7 (component)


State 26

    8 component: inductor •

    $default  reduce using rule 8 (component)


State 27

    9 component: vsource •
   28 vsource: vsource • RK_DC value
   29        | vsource • RK_AC value
   30        | vsource • RK_PULSE LBRACKET value value value value value value value RBRACKET

    RK_AC     shift, and go to state 79
    RK_DC     shift, and go to state 80
    RK_PULSE  shift, and go to state 81

    $default  reduce using rule 9 (component)


State 28

   10 component: isource •
   33 isource: isource • RK_DC value
   34        | isource • RK_AC value

    RK_AC  shift, and go to state 82
    RK_DC  shift, and go to state 83

    $default  reduce using rule 10 (component)


State 29

   12 component: vccs •

    $default  reduce using rule 12 (component)


State 30

   11 component: vcvs •

    $default  reduce using rule 11 (component)


State 31

   13 component: cccs •

    $default  reduce using rule 13 (component)


State 32

   14 component: ccvs •

    $default  reduce using rule 14 (component)


State 33

   15 command: op •

    $default  reduce using rule 15 (command)


State 34

   16 command: end •

    $default  reduce using rule 16 (command)


State 35

   17 command: print •
   45 print: print • VAR_I
   46      | print • VAR_V

    VAR_V  shift, and go to state 84
    VAR_I  shift, and go to state 85

    $default  reduce using rule 17 (command)


State 36

   18 command: dc •
   48 dc: dc • P_ISOURCE value value value
   49   | dc • P_VSOURCE value value value

    P_ISOURCE  shift, and go to state 86
    P_VSOURCE  shift, and go to state 87

    $default  reduce using rule 18 (command)


State 37

   19 command: ac •
   51 ac: ac • P_ISOURCE value value value
   52   | ac • P_VSOURCE value value value

    P_ISOURCE  shift, and go to state 88
    P_VSOURCE  shift, and go to state 89

    $default  reduce using rule 19 (command)


State 38

   20 command: options •
   54 options: options • OPTIONS_ITEM

    OPTIONS_ITEM  shift, and go to state 90

    $default  reduce using rule 20 (command)


State 39

   21 command: plot •
   58 plot: plot • VAR_I
   59     | plot • VAR_V

    VAR_V  shift, and go to state 91
    VAR_I  shift, and go to state 92

    $default  reduce using rule 21 (command)


State 40

   22 command: tran •

    $default  reduce using rule 22 (command)


State 41

   65 node: P_RESISTOR •

    $default  reduce using rule 65 (node)


State 42

   66 node: P_CAPACITOR •

    $default  reduce using rule 66 (node)


State 43

   67 node: P_INDUCTOR •

    $default  reduce using rule 67 (node)


State 44

   68 node: P_ISOURCE •

    $default  reduce using rule 68 (node)


State 45

   69 node: P_VSOURCE •

    $default  reduce using rule 69 (node)


State 46

   70 node: P_VCCS •
